rusty-cdk-core/tests/fails/no_content_based_dedup_for_standard_queue.stderr
error[E0599]: no method named `content_based_deduplication` found for struct `QueueBuilder<StandardState>` in the current scope
  --> tests/fails/no_content_based_dedup_for_standard_queue.rs:12:10
   |
 9 |       QueueBuilder::new("myQueue")
   |       ----------------------------
   |       |
   |  _____method `content_based_deduplication` is available on `QueueBuilder<rusty_cdk_core::sqs::StartState>`
   | |
10 | |         .standard_queue()
   | |          ---------------- method `content_based_deduplication` is available on `QueueBuilder<StandardState>`
11 | |         .queue_name(queue_name)
12 | |         .content_based_deduplication(true)
   | |         -^^^^^^^^^^^^^^^^^^^^^^^^^^^ private field, not a method
   | |_________|
   |
